# material_you_rs

./: Cargo.toml  README.md
src/: context.rs  lib.rs  roles.rs  theme.rs
src/color/: mod.rs
src/components/card/: elevated.rs  filled.rs  mod.rs  outlined.rs
src/css/: elevation.rs  mod.rs
src/mapper/: mod.rs  reference.rs  system.rs
src/provider/: mod.rs
src/system/: mod.rs
src/system/color/: mod.rs  provider.rs
src/system/elevation/: mod.rs
src/system/icons/: mod.rs  provider.rs
src/system/shapes/: mod.rs
src/system/shapes/variants/: extra_large.rs  extra_small.rs  full.rs  large.rs  medium.rs  mod.rs  none.rs  small.rs
src/system/typography/: mod.rs  provider.rs  typescale.rs
src/theme/: mod.rs
src/tokens/: component.rs  mod.rs  reference.rs  system.rs  token.rs
tests/: mapper.rs
